--- a/public/css/head.css
+++ b/public/css/head.css
@@ -116,6 +116,7 @@ table tr td tr td
 {
 	border:3px solid #505050;
 }*/
+
 .list-description
 {
 	color: #000000 !important;
@@ -148,6 +149,7 @@ table tr td tr td
 	text-align: left;
 	background-color: #F7931D;
 	color: #FFFFFF;
+	float: left;
 	background: #a5080a; /* Old browsers */
 	background: -moz-linear-gradient(top,  #a5080a 11%, #a5080a 11%, #750208 60%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(11%,#a5080a), color-stop(11%,#a5080a), color-stop(60%,#750208)); /* Chrome,Safari4+ */
@@ -164,6 +166,28 @@ table tr td tr td
 	border-top-right-radius: 15px;
 	padding-right: 20px;
 	padding-left: 20px;
+}
+
+.search-banner
+{
+	text-align: left;
+	background-color: #F7931D;
+	color: #FFFFFF;
+	background: #a5080a; /* Old browsers */
+	background: -moz-linear-gradient(top,  #a5080a 11%, #a5080a 11%, #750208 60%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(11%,#a5080a), color-stop(11%,#a5080a), color-stop(60%,#750208)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #a5080a 11%,#a5080a 11%,#750208 60%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #a5080a 11%,#a5080a 11%,#750208 60%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #a5080a 11%,#a5080a 11%,#750208 60%); /* IE10+ */
+	background: linear-gradient(to bottom,  #a5080a 11%,#a5080a 11%,#750208 60%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5080a', endColorstr='#750208',GradientType=0 ); /* IE6-9 */
+
+
+	box-shadow: 0px 10px 5px 1px #6D2B26;
+
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-top: 10px;
 }
 
 .content-banner
@@ -185,6 +209,19 @@ table tr td tr td
 .information-link
 {
 	color: #FFFFFF;
+}
+
+input[type="text"] 
+{
+    height: 100px;
+    font-size: 30pt;
+}
+.search-icon
+{
+	padding-right: 20px;
+	padding-left: 20px;
+	width: 120px;
+	height: 100px;
 }
 
 .icon
