--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -35,6 +35,11 @@ $thumb-size: 64px;
     @include box-shadow(3px $shadow $grey);
 }
 
+body {
+    // padding for fixed btm navbar
+    padding-bottom: 60px;
+}
+
 // Top most banner 
 div.banner {
     text-align: center;
@@ -105,6 +110,12 @@ div.banner {
         }
     }
 
+}
+
+.search-panel {
+    text-align: center;
+
+    @include padding(3px null 3px null);
 }
 
 // bottom navbar
