better horizontal allignment for details pages

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -108,6 +108,10 @@ div.search-bar {
         width: 45px;
         height: 45px;
     }
+
+    &-name{
+        padding-left: 10px;
+    }
 }
 
 // the panels that displays the places
