--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -110,8 +110,10 @@ div.search-bar {
     }
 
     &-name{
-        padding-left: 10px;
+        padding-left: 60px;
         padding-right: 0px;
+        padding-top: 1%;
+        padding-bottom: 1%;
     }
 }
 
@@ -250,9 +252,9 @@ img.nav-btn {
 //icons (glyphicons)
 .icon {
 
-    font-size: 300%;
+    font-size: 250%;
     color: $head-colour;
-    padding-top: 2%;
+    padding-top: 1%;
 
     &-rating {
         color: #DE3634;
