--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -258,7 +258,8 @@ img.nav-btn {
 
     &-rating {
         color: #DE3634;
-    font-size: $icon-size; }
+        font-size: $icon-size;
+        padding-left: 10px; }
 }
 
 .flaticon{
