--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -291,6 +291,10 @@ img.nav-btn {
         color: #818181;
         font-size: 150%;
     }
+    &-compass109:before{
+        color: #C80000;
+        font-size: 150%;
+    }
     
 }
 
