--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -16,7 +16,7 @@ $banner-padding: 3px;
 $banner-height: 20px;
 $shadow: 3px;
 $thumb-size: 64px;
-$icon-size: 500%;
+$icon-size: 150%;
 $search-thumb-size: 80px;
 $search-banner-padding-topbottom : 5px;
 $search-banner-padding-leftright : 2px;
@@ -110,7 +110,6 @@ div.search-bar {
     }
 
     &-name{
-        padding-left: 60px;
         padding-right: 0px;
         padding-top: 1%;
         padding-bottom: 1%;
@@ -258,44 +257,39 @@ img.nav-btn {
 
     &-rating {
         color: #DE3634;
-        font-size: $icon-size;
+        font-size: 250%;
         padding-left: 10px; }
+}
+
+.details-icon:before{
+    font-size: $icon-size;
 }
 
 .flaticon{
     &-info2:before{
         color: #4453A4;
-        font-size: 150%;
     }
     &-clock97:before{
         color: #4453A4;
-        font-size: 150%;
     }
     &-auricular6:before{
         color: #FF8800;
-        font-size: 150%;
     }
     &-map49:before{
         color: #17B64A;
-        font-size: 150%;
     }
     &-dollar179:before{
         color: #729245;
-        font-size: 150%;
     }
     &-internet5:before{
         color: #4453A4;
-        font-size: 150%;
     }
     &-lunch4:before{
         color: #818181;
-        font-size: 150%;
     }
     &-compass109:before{
         color: #C80000;
-        font-size: 150%;
     }
-    
 }
 
 //white text for links
@@ -305,8 +299,6 @@ color: $a-link-colour; }
 
 //Category
 .btn{
-    
-
     &-category {
         background-color: #FFFFFF;
         margin: 5px;
@@ -339,7 +331,6 @@ img.category-btn {
     padding: 1px;
 }
 
-
 img.topbar-btn {
     height: 40%;
     width: 90%;
@@ -365,9 +356,9 @@ img.topbar-btn {
 a.red{
     color: $head-colour;
 }
+
 .carousel-control, {
     width: 0%;
-    
 }
 
 .carousel-control.left, .carousel-control.right{
@@ -375,7 +366,6 @@ a.red{
 }
 
 .list-group-item{
-
 
     &-details{
         background-color: $body-colour;
@@ -389,28 +379,15 @@ a.red{
     background-color: $head-colour;
 }
 
+// description section of the details page
+#description > p {
+    text-align: justify;
+}
+
 .detail-panel {
     text-align: left;
     padding-left: 5px;
     @include padding(3px null 3px null);
-}
-
-.panel-body{
-    padding: 0px;
-}
-
-
-.col-md-2,
-.col-dm-2{
-    width: 11%
-}
-
-.col-xs-2,
-.col-sm-2{
-    width: 12.5%;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-left: 5px;
 }
 
 .list-group-item{
