--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -419,3 +419,10 @@ a.red{
 .ratable{
     font-size: $icon-size;
 }
+
+.topbar{
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 3px;
+    width: 13%;
+}
