new navbar icons

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -302,6 +302,16 @@ img.nav-btn {
     &-review2:before{
         color: #C80000;
     }
+    //NavBar Icons
+    &-compass109:before{
+        color: #FFFFFF;
+    }
+    &-home151:before{
+        color: #FFFFFF;
+    }
+    &-magnifying55:before{
+        color: #FFFFFF;
+    }
 }
 
 //white text for links
