--- a/public/assets/flaticon/flaticon.css
+++ b/public/assets/flaticon/flaticon.css
@@ -20,30 +20,39 @@ margin-left: 20px;
 .flaticon-award18:before {
 	content: "\e001";
 }
-.flaticon-clock97:before {
+.flaticon-basic6:before {
 	content: "\e002";
 }
-.flaticon-compass109:before {
+.flaticon-clock97:before {
 	content: "\e003";
 }
-.flaticon-dollar179:before {
+.flaticon-compass109:before {
 	content: "\e004";
 }
-.flaticon-info2:before {
+.flaticon-dollar179:before {
 	content: "\e005";
 }
-.flaticon-info6:before {
+.flaticon-home151:before {
 	content: "\e006";
 }
-.flaticon-internet5:before {
+.flaticon-info2:before {
 	content: "\e007";
 }
-.flaticon-lunch4:before {
+.flaticon-info6:before {
 	content: "\e008";
 }
-.flaticon-map49:before {
+.flaticon-internet5:before {
 	content: "\e009";
 }
-.flaticon-review2:before {
+.flaticon-lunch4:before {
 	content: "\e00a";
+}
+.flaticon-magnifying55:before {
+	content: "\e00b";
+}
+.flaticon-map49:before {
+	content: "\e00c";
+}
+.flaticon-review2:before {
+	content: "\e00d";
 }
