all details pages done

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -272,9 +272,6 @@ img.nav-btn {
     &-info6:before{
         color: #4453A4;
     }
-    &-info6ver:before{
-        color: #4453A4;
-    }
     &-clock97:before{
         color: #4453A4;
     }
@@ -303,7 +300,7 @@ img.nav-btn {
         color: #C80000;
     }
     //NavBar Icons
-    &-compass109:before{
+    &-basic6:before{
         color: #FFFFFF;
     }
     &-home151:before{
