--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -147,8 +147,7 @@ div.search-bar {
     background-color: $title-colour;
     margin-top: $margin;
     margin-bottom: $margin - 4px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
 
     @include box-shadow(3px $shadow $grey);
 
