UI Fixes and Tweaks

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -437,4 +437,10 @@ hr{
     width: 100%; 
     height: 2px; 
     background: #E23C3B;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.panel-body-category{
+    padding: 5px;
 }
