--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -110,9 +110,11 @@ div.search-bar {
     }
 
     &-name{
-        padding-right: 0px;
+        padding-right: 20px;
         padding-top: 1%;
         padding-bottom: 1%;
+
+        margin-left: 10px;
     }
 }
 
