--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -446,3 +446,11 @@ hr{
 .panel-body-category{
     padding: 5px;
 }
+
+hr.mainpage{
+    background: $head-colour;
+    height: 10px; 
+    margin-top: 0px;
+    border-top: 4px solid #404041;
+    border-bottom: 4px solid #404041;
+}
